<resources>
  <string name="app_name">CleanArchitecture</string>

  <plurals name="comments">
    <item quantity="one"> %1$d comment </item>
    <item quantity="other"> %1$d comments </item>
  </plurals>

  <string name="no_internet_connection"> No Internet Connection</string>
  <string name="slide_menu_home">Home</string>
  <string name="slide_menu_about">About</string>

</resources>
