<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:layout_margin="@dimen/space_big_views"
  android:gravity="center_horizontal"
  android:orientation="horizontal">

  <ProgressBar
    android:id="@+id/progress"
    android:layout_width="@dimen/item_loading_size"
    android:layout_height="@dimen/item_loading_size" />
</LinearLayout>