<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:id="@+id/llContainerEmpty"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:gravity="center"
  android:orientation="vertical">

  <ImageView
    android:id="@+id/imageDefault"
    android:layout_width="@dimen/image_no_registry_size"
    android:layout_height="@dimen/image_no_registry_size"
    android:scaleType="fitCenter"
    app:srcCompat="@drawable/ic_wifi_off" />

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/no_internet_connection"
    android:textColor="@color/disableTextColor"
    android:textSize="@dimen/fontsize_subhead" />

</LinearLayout>